--- a/index2.html
+++ b/index2.html
@@ -1,223 +1,99 @@
-/* Simple modern portfolio styling */
-:root{
-  --bg:#0f1724;
-  --card:#0b1220;
-  --accent:#7c3aed;
-  --muted:#9aa4b2;
-  --text:#e6eef8;
-}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Sleep Py Portfolio</title>
+  <link rel="stylesheet" href="styles.css" />
+</head>
+<body>
+  <span class="loader"></span>
+  <div id="content">
+  <nav class="navbar" role="navigation" aria-label="Main navigation">
+    <div class="logo">Sleep Py</div>
 
-*{box-sizing:border-box}
-html,body{height:100%}
-body{
-  margin:0;
-  font-family:Inter, ui-sans-serif, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
-  background: linear-gradient(180deg, #071021 0%, #071526 100%);
-  color:var(--text);
-  -webkit-font-smoothing:antialiased;
-  -moz-osx-font-smoothing:grayscale;
-  line-height:1.5;
-}
+    <!-- Mobile menu toggle -->
+    <button id="nav-toggle" class="nav-toggle" aria-controls="primary-navigation" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="bar" aria-hidden="true"></span>
+      <span class="bar" aria-hidden="true"></span>
+      <span class="bar" aria-hidden="true"></span>
+    </button>
 
-/* The loader */
-.loader {
-  height: 30px;
-  width: 10px;
-  border-radius: 4px;
-  color: #fff;
-  background: currentColor;
+    <ul id="primary-navigation" class="nav-links">
+      <li><a href="#about">About</a></li>
+      <li><a href="#projects">Projects</a></li>
+      <li><a href="#resume">Resume</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+  </nav>
 
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 9999;
+  <main>
+    <section id="about" class="section about-section">
+      <div class="about-content">
+        <h1>About Me</h1>
+        <div class="about-image-wrap">
+          <!-- Default project image stored in repo -->
+          <img id="about-image" class="about-image" src="assets/images/profile.svg" alt="Profile image">
+        </div>
+        <div class="about-text">
+          <p>A builder of games, tools, and curious digital contraptions. Exploring automation, AI, and playful worlds.</p>
+        </div>
+      </div>
+    </section>
 
-  animation: ht 1s ease-in infinite alternate;
-  transition: transform 1s ease, opacity 1s ease;
+    <section id="projects" class="section">
+      <h1>Projects</h1>
+      <div class="project-grid">
+        <div class="project-card">
+          <h3>Halloween Runner</h3>
+          <p>A spooky endless runner crafted with Godot.</p>
+          <video class="project-video" controls preload="metadata" poster="assets/images/video-poster.svg">
+            <source src="assets/videos/halloween-runner.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
+        </div>
 
-  box-shadow:
-    15px 0 0 -1px,
-    -15px 0 0 -1px,
-    30px 0 0 -2px,
-    -30px 0 0 -2px,
-    45px 0 0 -3px,
-    -45px 0 0 -3px;
-}
+        <div class="project-card">
+          <h3>Zombie Exterminator</h3>
+          <p>A survival game with pictures-to-story cutscenes.</p>
+          <video class="project-video" controls preload="metadata" poster="assets/images/video-poster.svg">
+            <source src="assets/videos/zombie-exterminator.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
+        </div>
 
+        <div class="project-card">
+          <h3>Honor of the Knight</h3>
+          <p>Lightweight medieval adventure built for mobile.</p>
+          <video class="project-video" controls preload="metadata" poster="assets/images/video-poster.svg">
+            <source src="assets/videos/honor-of-the-knight.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
+        </div>
 
+        <div class="project-card">
+          <h3>2D to 3D AI Tool</h3>
+          <p>A web-based model converter under development.</p>
+          <video class="project-video" controls preload="metadata" poster="assets/images/video-poster.svg">
+            <source src="assets/videos/2d-to-3d-ai-tool.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
+        </div>
+      </div>
+    </section>
 
-@keyframes ht {
-  100% {
-    height: 0px;
-  }
-}
+    <section id="resume" class="section">
+      <h1>Resume</h1>
+      <p>You can paste your resume content here or link a PDF.</p>
+    </section>
 
-#content {
-    display: none;
-    text-align: center;
-    color: #fff;
-    opacity: 0;
-    transform: scale(0.6);
-    transition: opacity 1.5s ease, transform 1.5s ease;
-  }
+    <section id="contact" class="section">
+      <h1>Contact</h1>
+      <p>Email: <a href="mailto:sleep.py@example.com">sleep.py@example.com</a></p>
+    </section>
+  </main>
+  </div>
 
-/* Navbar */
-.navbar{
-  position:sticky;
-  top:0;
-  display:flex;
-  align-items:center;
-  justify-content:space-between;
-  gap:1rem;
-  padding:0.9rem 1.5rem;
-  background:linear-gradient(90deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));
-  backdrop-filter: blur(6px);
-  border-bottom:1px solid rgba(255,255,255,0.03);
-  z-index:10;
-}
-.logo{
-  font-weight:700;
-  letter-spacing:0.6px;
-  color:var(--accent);
-  font-size:1.05rem;
-}
-
-/* nav links */
-.nav-links{
-  list-style:none;
-  margin:0;
-  padding:0;
-  display:flex;
-  gap:1rem;
-  align-items:center;
-}
-.nav-links a{
-  color:var(--muted);
-  text-decoration:none;
-  padding:0.4rem 0.6rem;
-  border-radius:6px;
-  transition:all .18s ease;
-  font-size:0.95rem;
-}
-.nav-links a:hover{ color:var(--text); background:rgba(255,255,255,0.02) }
-
-/* Mobile toggle button */
-.nav-toggle{
-  display:none;
-  background:transparent;
-  border:0;
-  padding:6px;
-  margin-left:auto;
-  cursor:pointer;
-}
-.nav-toggle:focus{ outline:2px solid rgba(124,58,237,0.25); border-radius:6px; }
-.nav-toggle .bar{
-  display:block;
-  width:20px;
-  height:2px;
-  background:var(--text);
-  margin:4px 0;
-  border-radius:2px;
-}
-
-/* Page sections */
-.section{
-  max-width:1100px;
-  margin:2.2rem auto;
-  padding:1.6rem;
-}
-.section h1{
-  margin:0 0 0.6rem 0;
-  font-size:1.6rem;
-  color:var(--text);
-}
-.section p{ color:var(--muted); margin:0 0 1rem 0 }
-
-/* About section */
-.about-content{
-  display:flex;
-  gap:1rem;
-  align-items:flex-start;
-}
-.about-image-wrap{
-  flex:0 0 200px;
-  display:flex;
-  flex-direction:column;
-  align-items:center;
-  gap:0.6rem;
-}
-.about-image{
-  width:200px;
-  height:200px;
-  object-fit:cover;
-  border-radius:12px;
-  border:1px solid rgba(255,255,255,0.04);
-  box-shadow: 0 6px 18px rgba(2,6,23,0.6);
-}
-.about-text{ flex:1; color:var(--muted) }
-
-/* Projects grid */
-.project-grid{
-  display:grid;
-  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-  gap:1rem;
-  margin-top:1rem;
-}
-.project-card{
-  background:linear-gradient(180deg, rgba(255,255,255,0.015), rgba(255,255,255,0.01));
-  border:1px solid rgba(255,255,255,0.03);
-  padding:1.1rem;
-  border-radius:10px;
-  box-shadow: 0 6px 18px rgba(2,6,23,0.6);
-}
-.project-card h3{ margin:0 0 0.35rem 0; font-size:1.05rem }
-.project-card p{ margin:0 0.6rem 0.8rem 0; color:var(--muted); font-size:0.95rem }
-
-/* Video inside project card */
-.project-video{
-  width:100%;
-  height:auto;
-  border-radius:8px;
-  background:#000;
-  margin-bottom:0.6rem;
-  max-height:340px;
-}
-
-/* Contact/resume tweaks */
-#contact a{ color:var(--accent); text-decoration:none }
-#contact a:hover{ text-decoration:underline }
-
-/* Responsive */
-@media (max-width:900px){
-  .nav-links{ gap:0.6rem; }
-}
-@media (max-width:640px){
-  .nav-toggle{ display:block; }
-  .nav-links{
-    position: absolute;
-    top:64px;
-    right:12px;
-    background:rgba(5,9,16,0.95);
-    padding:12px;
-    border-radius:10px;
-    flex-direction:column;
-    align-items:flex-start;
-    gap:0.6rem;
-    min-width:160px;
-    transform-origin: top right;
-    box-shadow: 0 10px 30px rgba(2,6,23,0.6);
-    opacity:0;
-    pointer-events:none;
-    transform: translateY(-6px) scale(0.98);
-    transition: all .18s ease;
-  }
-  .nav-links.open{
-    opacity:1;
-    pointer-events:auto;
-    transform: translateY(0) scale(1);
-  }
-  .about-content{ flex-direction:column; align-items:center; text-align:center; }
-  .about-image-wrap{ flex:0 0 auto; }
-  .section{ padding:1rem }
-}
+  <script src="script.js"></script>
+</body>
+</html>
