--- a/index_ai.html
+++ b/index_ai.html
@@ -1,1 +1,23 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>AI Chat Demo</title>
+  <style>
+    body { font-family: sans-serif; padding: 20px; }
+    #chat { border: 1px solid #ccc; height: 300px; overflow-y: scroll; padding: 10px; margin-bottom: 10px; }
+    .message { margin: 5px 0; }
+    .user { color: blue; }
+    .bot { color: green; }
+  </style>
+</head>
+<body>
+  <h1>AI Chat Demo</h1>
+  <div id="chat"></div>
+  <input id="input" type="text" placeholder="Type a message..." />
+  <button id="send">Send</button>
+  <button id="clear">Clear Chat</button>
 
+  <script src="script.js"></script>
+</body>
+</html>
