--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <li><a href="#projects">Projects</a></li>
       <li><a href="#resume">Resume</a></li>
       <li><a href="#contact">Contact</a></li>
-      <li><a href="index.html" target="_blank">AI Chat</a></li>
+      <li><a href="index_ai.html" target="_blank">AI Chat</a></li>
     </ul>
   </nav>
 
