--- a/index_ai.html
+++ b/index_ai.html
@@ -18,6 +18,6 @@
   <button id="send">Send</button>
   <button id="clear">Clear Chat</button>
 
-  <script src="script.js"></script>
+  <script src="script_ai.js"></script>
 </body>
 </html>
