--- a/index.html
+++ b/index.html
@@ -20,24 +20,30 @@
     </button>
 
     <ul id="primary-navigation" class="nav-links">
+      <li><a href="index_ai.html" target="_blank">AI Chat</a></li>
       <li><a href="#about">About</a></li>
       <li><a href="#projects">Projects</a></li>
       <li><a href="#resume">Resume</a></li>
       <li><a href="#contact">Contact</a></li>
-      <li><a href="index_ai.html" target="_blank">AI Chat</a></li>
     </ul>
   </nav>
 
   <main>
     <section id="about" class="section about-section">
-      <div class="about-content">
         <h1>About Me</h1>
+	<div class="about-content">
+        
         <div class="about-image-wrap">
           <!-- Default project image stored in repo -->
-          <img id="about-image" class="about-image" src="assets/images/profile.svg" alt="Profile image">
+          <img id="about-image" class="about-image" src="pic.jpg" alt="Profile image">
         </div>
         <div class="about-text">
-          <p>A builder of games, tools, and curious digital contraptions. Exploring automation, AI, and playful worlds.</p>
+          <p>
+           Hi everyone! I’m Mohammad Wafi Degree holder from Universiti Sains Malaysia (USM) with a strong interest in technology, problem solving.
+           I enjoy building practical solutions, exploring new tools, 
+           and improving my skills through hands-on projects. I am motivated, adaptable, 
+           and always eager to take on new challenges that help me grow both professionally and personally.
+          </p>
         </div>
       </div>
     </section>
@@ -85,16 +91,28 @@
 
     <section id="resume" class="section">
       <h1>Resume</h1>
-      <p>You can paste your resume content here or link a PDF.</p>
+      <embed src="resume_wafi.pdf#toolbar=0" type="application/pdf" width="77%" height="1132px" />
+      <div style="margin-top:16px;">
+      <a href="resume_wafi.pdf" download class="download-btn"> 
+      Download Resume (PDF)
+      </a> 
     </section>
 
     <section id="contact" class="section">
       <h1>Contact</h1>
-      <p>Email: <a href="mailto:sleep.py@example.com">sleep.py@example.com</a></p>
+	<div class="contact-card">
+	 <a href="https://mail.google.com/mail/?view=cm&to=wafinazrin17@gmail.com" target="_blank">
+	  <img src="gmail.png"/>
+	 </a>
+	</div>
+      	<div class="contact-line">
+  	 <span>Email: <a>wafinazrin17@gmail.com</a></span>
+  	 <span>Phone: +6011-26027597</span>
+	</div>
     </section>
   </main>
   </div>
 
   <script src="script.js"></script>
 </body>
-</html>
+</html>	
