--- a/index_ai.html
+++ b/index_ai.html
@@ -184,7 +184,7 @@
 </head>
 <body class="dark">
   <div class="chat-container">
-    <h1>AI Chat Demo</h1>
+    <h1>AI Chat Demo by Mohammad Wafi</h1>
     <div id="chat"></div>
     <div class="input-area">
       <input id="input" type="text" placeholder="Type a message..." />
