--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Portfolio</title>
+  <title>Sleep Py Portfolio</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <span class="loader"></span>
   <div id="content">
   <nav class="navbar" role="navigation" aria-label="Main navigation">
-    <div class="logo">Sleep Py</div>
+    <div class="logo">Portfolio</div>
 
     <!-- Mobile menu toggle -->
     <button id="nav-toggle" class="nav-toggle" aria-controls="primary-navigation" aria-expanded="false" aria-label="Toggle navigation">
