--- a/index_ai.html
+++ b/index_ai.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AI Chat Demo</title>
+  <title>AI Chat Demo by Mohammad Wafi</title>
   <style>
     :root {
       --bg-dark: #0f1117;
