--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <span class="loader"></span>
   <div id="content">
   <nav class="navbar" role="navigation" aria-label="Main navigation">
-    <div class="logo">Sleep Py</div>
+    <div class="logo">Portfolio</div>
 
     <!-- Mobile menu toggle -->
     <button id="nav-toggle" class="nav-toggle" aria-controls="primary-navigation" aria-expanded="false" aria-label="Toggle navigation">
