--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 	 </a></div>
 	  </p>
           <video class="project-video" controls preload="metadata" poster="assets/images/video-poster.svg">
-            <source src="assets/videos/halloween-runner.mp4" type="video/mp4">
+            <source src="Ai_bot.mp4" type="video/mp4">
             Your browser does not support the video tag.
           </video>
         </div>
@@ -70,7 +70,7 @@
 	 </a></div>
 	  </p>
           <video class="project-video" controls preload="metadata" poster="assets/images/video-poster.svg">
-            <source src="assets/videos/zombie-exterminator.mp4" type="video/mp4">
+            <source src="face_recognition.mp4" type="video/mp4">
             Your browser does not support the video tag.
           </video>
         </div>
@@ -79,7 +79,7 @@
           <h3>Dino Max</h3>
           <p>A fun and adventurous mobile game where kids can explore a world of dinosaurs, collect treasures, and enjoy exciting prehistoric challenges.</p>
           <video class="project-video" controls preload="metadata" poster="assets/images/video-poster.svg">
-            <source src="assets/videos/honor-of-the-knight.mp4" type="video/mp4">
+            <source src="Dino_Max.mp4" type="video/mp4">
             Your browser does not support the video tag.
           </video>
         </div>
