--- a/index.html
+++ b/index.html
@@ -89,46 +89,54 @@
 
     <section id="resume" class="section">
   <h1>Resume</h1>
+
   <div class="pdf-container">
-    <embed src="resume_wafi.pdf#toolbar=0" type="application/pdf" />
+    <iframe
+      src="resume_wafi.pdf#toolbar=0"
+      loading="lazy">
+    </iframe>
   </div>
-  <div style="margin-top:16px;">
-    <a href="resume_wafi.pdf" download class="download-btn"> 
+
+  <div class="resume-actions">
+    <a href="resume_wafi.pdf" target="_blank" class="download-btn">
       Download Resume (PDF)
-    </a> 
+    </a>
   </div>
 </section>
 
+
 <style>
-  /* PDF container default (desktop) */
+  /* Desktop */
   .pdf-container {
-    width: 77%;           /* slightly narrower on desktop */
-    max-width: 1000px;    /* optional: prevents super wide screens */
-    height: 1132px;       /* original desktop height */
+    width: 77%;
+    max-width: 1000px;
+    height: 1132px;
     margin: auto;
   }
 
-  .pdf-container embed {
+  .pdf-container iframe {
     width: 100%;
     height: 100%;
+    border: none;
   }
 
-  /* Tablets */
+  /* Tablet */
   @media (max-width: 1024px) {
     .pdf-container {
-      width: 90%;        /* a bit wider for smaller desktops/tablets */
-      height: 900px;     /* slightly shorter height */
+      width: 90%;
+      height: 900px;
     }
   }
 
-  /* Mobile phones */
+  /* Mobile */
   @media (max-width: 768px) {
     .pdf-container {
-      width: 100%;       /* full width on mobile */
-      height: 80vh;      /* adjust height to viewport */
+      width: 95%;
+      height: 80vh;
     }
   }
 </style>
+
 
 
 
