--- a/index.html
+++ b/index.html
@@ -89,54 +89,46 @@
     <section id="resume" class="section">
   <h1>Resume</h1>
 
-  <div class="pdf-container">
-    <embed
-      src="resume_wafi.pdf"
-      type="application/pdf">
+  <div class="resume-preview">
+    <img src="resume_wafi.jpg" alt="Resume preview">
   </div>
 
   <div style="margin-top:16px;">
-    <a href="resume_wafi.pdf" class="download-btn">
+    <a href="resume_wafi.pdf" download class="download-btn">
       Download Resume (PDF)
     </a>
   </div>
 </section>
 
+
 <style>
- /* Desktop */
-.pdf-container {
+ .resume-preview {
   width: 77%;
   max-width: 1000px;
-  height: 1132px;
   margin: auto;
 }
 
-.pdf-container embed {
+.resume-preview img {
   width: 100%;
-  height: 100%;
+  height: auto;
+  display: block;
 }
 
 /* Tablet */
 @media (max-width: 1024px) {
-  .pdf-container {
+  .resume-preview {
     width: 90%;
-    height: 900px;
   }
 }
 
 /* Mobile */
 @media (max-width: 768px) {
-  .pdf-container {
+  .resume-preview {
     width: 95%;
-    height: 80vh;
   }
 }
 
-
 </style>
-
-
-
 
     <section id="contact" class="section">
       <h1>Contact</h1>
